fix overflow because of swiper

--- a/app/css/layout/page.scss
+++ b/app/css/layout/page.scss
@@ -20,6 +20,7 @@
   &__content {
     flex: 1 0 auto;
     min-height: 1px;
+    overflow: hidden;
 
     @include tablet-and-mobile{
       margin-top: 75px;
